--- a/[Klasifikasi]_Submission_Akhir_BMLP_Savilla-Tifania-M.ipynb
+++ b/[Klasifikasi]_Submission_Akhir_BMLP_Savilla-Tifania-M.ipynb
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "BlmvjLY9M4Yj"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "GHCGNTyrM5fS"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -114,13 +114,13 @@
       ],
       "metadata": {
         "id": "bCsep0NZ0LUf",
-        "outputId": "3b86f452-94e4-409e-c100-626e47139fd9",
+        "outputId": "47e2d190-53cc-47c3-fc48-c7d1d0b48f8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 261
+          "height": 206
         }
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +149,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9da56485-f0db-495f-946f-258eb080f747\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-301da37d-d991-4692-b677-4d3e286cd0bd\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -258,7 +258,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9da56485-f0db-495f-946f-258eb080f747')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-301da37d-d991-4692-b677-4d3e286cd0bd')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -310,12 +310,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9da56485-f0db-495f-946f-258eb080f747 button.colab-df-convert');\n",
+              "        document.querySelector('#df-301da37d-d991-4692-b677-4d3e286cd0bd button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9da56485-f0db-495f-946f-258eb080f747');\n",
+              "        const element = document.querySelector('#df-301da37d-d991-4692-b677-4d3e286cd0bd');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -344,7 +344,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
@@ -363,7 +363,7 @@
       "source": [
         "### MULAI CODE OPSIONAL ###\n",
         "\n",
-        "categorical_cols = list(df_final.select_dtypes(include=['object']).columns)\n",
+        "categorical_cols = list(df.select_dtypes(include=['object']).columns)\n",
         "\n",
         "# Gunakan 'pd.get_dummies' untuk melakukan OneHotEncoding\n",
         "df_encoded = pd.get_dummies(\n",
@@ -379,13 +379,13 @@
       ],
       "metadata": {
         "id": "XxD6WMo4gxVx",
-        "outputId": "3cfac490-e2a8-4c25-975b-1f3ab7da2055",
+        "outputId": "4e23715e-5a19-47e8-eea1-3e4db3fa46a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 273
         }
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,7 +437,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-177ac7cb-0ccf-42ca-94f2-eaba9eff9df4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-778ca42c-6e71-45a9-9dc5-0fbda7860278\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -607,7 +607,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-177ac7cb-0ccf-42ca-94f2-eaba9eff9df4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-778ca42c-6e71-45a9-9dc5-0fbda7860278')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -659,12 +659,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-177ac7cb-0ccf-42ca-94f2-eaba9eff9df4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-778ca42c-6e71-45a9-9dc5-0fbda7860278 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-177ac7cb-0ccf-42ca-94f2-eaba9eff9df4');\n",
+              "        const element = document.querySelector('#df-778ca42c-6e71-45a9-9dc5-0fbda7860278');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -692,7 +692,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -737,12 +737,12 @@
       ],
       "metadata": {
         "id": "OubAW-7ONKVj",
-        "outputId": "a26e02ab-22a0-44e5-bdd5-f4fb63d293ae",
+        "outputId": "8e1d5e98-ba4f-429e-9802-f64a6c3d6ff6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -787,13 +787,13 @@
       ],
       "metadata": {
         "id": "4JYxBe87NLDk",
-        "outputId": "ff3c8e7d-6e66-4898-c7e2-65634f5be338",
+        "outputId": "a851b3f0-2a62-494d-86aa-88f9e1a8dae5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
         }
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1221,7 +1221,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -1243,7 +1243,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1293,13 +1293,13 @@
       ],
       "metadata": {
         "id": "kB_8LIWMATl6",
-        "outputId": "42fddb82-2ec9-4882-df3d-81c3c18281ae",
+        "outputId": "fca5cf39-9a74-457c-8b59-0e3220f1ccfe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
         }
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1727,7 +1727,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -1756,12 +1756,12 @@
       ],
       "metadata": {
         "id": "bRlKm5BVAT91",
-        "outputId": "b46b17ef-a1e2-47c0-8fdc-257705fc6c26",
+        "outputId": "167a18c9-0f62-4b77-968d-f82d9dcba815",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1810,12 +1810,12 @@
       ],
       "metadata": {
         "id": "dUPItkbXBNkO",
-        "outputId": "1e12c258-4cb9-4b44-9118-133f713f2cb0",
+        "outputId": "ec8d0741-3644-4d65-d115-f24f1a48f211",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1825,7 +1825,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 13
         }
       ]
     },
@@ -1872,13 +1872,13 @@
       ],
       "metadata": {
         "id": "dFCTxJJq-m-l",
-        "outputId": "3c163241-c935-46bc-a44e-eb42f8cc1935",
+        "outputId": "79a57a10-128d-4ec3-ea8a-28b662d53ad9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 166
         }
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2320,7 +2320,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 14
         }
       ]
     },
@@ -2342,12 +2342,12 @@
       ],
       "metadata": {
         "id": "1g6EPSSWxjcQ",
-        "outputId": "b8e06eeb-bdf2-4305-9ac3-6558bb236ef6",
+        "outputId": "bed6e722-d391-4306-d7e9-a8b06f0713d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -2382,12 +2382,12 @@
       ],
       "metadata": {
         "id": "7UJNcVP--n7S",
-        "outputId": "70ea9962-04b3-4716-fef9-88af2e7efe24",
+        "outputId": "d344efb3-be61-4c87-9062-fafca7aa5b91",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2397,7 +2397,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 16
         }
       ]
     },
