--- a/[Clustering]_Submission_Akhir_BMLP_Savilla-Tifania-M.ipynb
+++ b/[Clustering]_Submission_Akhir_BMLP_Savilla-Tifania-M.ipynb
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "BlmvjLY9M4Yj"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "-tfuxA86YztE"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
         },
         "outputId": "8f176dc0-1b8b-4429-9551-1d28fcb7371b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +484,7 @@
         },
         "outputId": "badb0490-aca8-4009-d49d-f217ec002616"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
         },
         "outputId": "8e0a880e-45db-4942-ad53-a33c13756b7f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -809,7 +809,7 @@
         },
         "outputId": "3b69e4ae-44ae-4949-eb1f-66a0339abb7f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -874,7 +874,7 @@
         },
         "outputId": "14beb446-ee48-43ff-f470-d320fe9b7f6d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -963,7 +963,7 @@
         },
         "outputId": "ec1bc21a-916e-4a8b-dabb-c1f45f8d78f6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1024,7 +1024,7 @@
         },
         "outputId": "ee8a49c5-6b98-4ca7-9b48-77fdc5d8b2de"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1181,7 +1181,7 @@
         },
         "outputId": "73b53543-eef5-4986-d2a8-a754f57d0178"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1229,7 +1229,7 @@
         },
         "outputId": "4b8f3cba-b759-4dc8-86d8-2a9e62a30ef4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1390,7 +1390,7 @@
         },
         "outputId": "267c37d5-92a4-4ce9-fa13-3a590cac4527"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1448,7 +1448,7 @@
         },
         "outputId": "6cad5d9c-afd4-48d4-af6b-d7f74bb4bacc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1712,7 +1712,7 @@
         },
         "outputId": "0dc40716-f378-4807-e03f-b457c3b29b18"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1958,7 +1958,7 @@
         },
         "outputId": "9f603a84-db93-4976-cfeb-d8e28427340b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2045,7 +2045,7 @@
         },
         "outputId": "d933cd6a-05d3-4ce9-b459-9d46ccbef29f"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2351,7 +2351,7 @@
         },
         "outputId": "3400e477-7b37-44dc-ab33-2fb05b1dcef0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2633,7 +2633,7 @@
         },
         "outputId": "a0a02227-a679-4977-ee19-ab0096e9cd10"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2894,7 +2894,7 @@
         },
         "outputId": "c3b4b57e-7018-4a19-b9d1-77c827022af9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3199,7 +3199,7 @@
         },
         "outputId": "c06c1618-1d53-4004-a6c4-7cfd7848845b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3265,7 +3265,7 @@
         },
         "outputId": "6b62da82-5bbf-4302-ccbd-c98eb5a6499f"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3725,7 +3725,7 @@
         },
         "outputId": "441c7525-e1f8-43ee-a849-8fc0ce5ff74d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3775,7 +3775,7 @@
         },
         "outputId": "4f083077-fa33-495c-d929-6b70486b0eb3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3894,7 +3894,7 @@
         },
         "outputId": "72a943f7-26c3-402c-9541-d594712fb02a"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4345,7 +4345,7 @@
         },
         "outputId": "39944a8b-2cd4-4f75-c5cc-eb9ccf85347e"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4410,7 +4410,7 @@
         },
         "outputId": "ea47de55-e901-450e-e0bb-da28bd30f1c3"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4728,18 +4728,26 @@
       "source": [
         "# **⚠️PERHATIAN: JAWAB DI BAWAH SINI**\n",
         "## Menjelaskan karakteristik tiap cluster berdasarkan rentangnya sebelum **Inverse** (masih dalam kondisi **Scaled**).\n",
-        "1. **CLUSTER 1: (The Efficient Young Spenders)**:\n",
-        "  - **Rata-rata (mean) <Fitur>:**\n",
-        "    - TransactionAmount: 0.02 (Sedikit di atas rata-rata)\n",
-        "    - CustomerAge: -0.07 (Paling rendah/muda di antara semua cluster)\n",
-        "    - TransactionDuration: -0.05 (Paling rendah/cepat di antara semua cluster)\n",
-        "    - AccountBalance: -0.01 (Sedikit di bawah rata-rata)\n",
-        "    - LoginAttempts: 0.00 (Tepat di rata-rata)\n",
-        "  - **Analisis:**\n",
-        "    - Cluster 1 mewakili persona nasabah muda yang tech-savvy dan efisien. Berdasarkan nilai scaled CustomerAge yang paling negatif (-0.07), ini adalah kelompok dengan rata-rata usia paling muda dibandingkan cluster lainnya. Meskipun masih muda, mereka memiliki daya beli yang sehat karena TransactionAmount mereka berada di atas rata-rata (0.02).\n",
-        "    - Karakteristik yang paling menonjol adalah TransactionDuration yang paling rendah (-0.05), yang mengindikasikan bahwa kelompok ini sangat gesit dan tidak menghabiskan banyak waktu saat melakukan proses transaksi. Perilaku yang sangat identik dengan pengguna aplikasi digital yang mahir.\n",
-        "    - Namun, perlu diperhatikan bahwa AccountBalance mereka sedikit di bawah rata-rata (-0.01), menunjukkan bahwa meskipun aktif bertransaksi, kelompok ini mungkin belum memiliki simpanan sebesar nasabah yang lebih senior (seperti di Cluster 3).\n",
-        "    - Strategi pemasaran yang cocok adalah fitur transaksi instan, cashback harian, atau produk tabungan mikro."
+        "1. **CLUSTER 0: (Nasabah Dewasa dengan Transaksi Stabil)**\n",
+        "  - Rata-rata (mean) Transaction Amount: -0.01\n",
+        "  - Rata-rata (mean) Customer Age: 0.03\n",
+        "  - Rata-rata (mean) Account Balance: -0.00\n",
+        "  - Analisis: Cluster ini mencakup pelanggan usia dewasa dengan jumlah transaksi dan saldo yang sangat mendekati rata-rata populasi. Pelanggan dalam cluster ini cenderung memiliki perilaku perbankan yang stabil dan moderat. Rekomendasi untuk kelompok ini adalah mempertahankan loyalitas dengan program poin standar atau penawaran asuransi kesehatan yang sesuai usia mereka.\n",
+        "2. **CLUSTER 1: (Nasabah Muda yang Efisien dan Aktif)**\n",
+        "  - Rata-rata (mean) Transaction Amount: 0.02\n",
+        "  - Rata-rata (mean) Customer Age: -0.07 (Paling muda)\n",
+        "  - Rata-rata (mean) Transaction Duration: -0.05 (Paling cepat)\n",
+        "  - Analisis: Cluster ini mencakup pelanggan usia paling muda yang sangat terampil menggunakan platform digital, terlihat dari durasi transaksi yang sangat singkat namun nilai transaksinya di atas rata-rata. Rekomendasi untuk kelompok ini adalah menawarkan promo cashback harian, fitur transaksi instan, atau produk tabungan digital yang fleksibel.\n",
+        "3. **CLUSTER 2: (Nasabah Pasif dengan Transaksi Rendah)**\n",
+        "  - Rata-rata (mean) Transaction Amount: -0.03 (Paling rendah)\n",
+        "  - Rata-rata (mean) Customer Age: 0.01\n",
+        "  - Rata-rata (mean) Account Balance: -0.02\n",
+        "  - Analisis: Cluster ini mencakup pelanggan yang sangat jarang bertransaksi dengan nilai nominal yang kecil. Pelanggan dalam kelompok ini cenderung pasif atau hanya menggunakan akun untuk kebutuhan dasar. Rekomendasi untuk kelompok ini adalah memberikan edukasi mengenai fitur aplikasi atau promo biaya admin gratis untuk meningkatkan aktivitas mereka.\n",
+        "4. **CLUSTER 3: (Nasabah Premium Senior dengan Aset Besar)**\n",
+        "  - Rata-rata (mean) Transaction Amount: 0.02\n",
+        "  - Rata-rata (mean) Customer Age: 0.04 (Paling senior)\n",
+        "  - Rata-rata (mean) Account Balance: 0.04 (Saldo tertinggi)\n",
+        "  - Analisis: Cluster ini mencakup pelanggan usia matang/senior dengan saldo akun paling tinggi di antara kelompok lain. Mereka cenderung lebih teliti dalam bertransaksi (durasi lebih lama). Rekomendasi untuk kelompok ini adalah penawaran produk investasi eksklusif (deposito/obligasi), layanan priority banking, atau rencana masa tua."
       ],
       "metadata": {
         "id": "KrjMI_dG6tnb"
@@ -4779,7 +4787,7 @@
         },
         "outputId": "787e6246-a751-4c75-ea9a-f9e40cc55b6d"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5021,7 +5029,7 @@
       "metadata": {
         "id": "fkbg_o80aRSH"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5060,7 +5068,7 @@
         },
         "outputId": "f7f525ce-0d99-40b3-d32b-a01f381bdd84"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5315,7 +5323,7 @@
         },
         "outputId": "1b8dce50-56ac-450a-e8eb-b52cb971ecdd"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5573,7 +5581,7 @@
         },
         "outputId": "05670a39-aaed-4187-b678-7b1253366837"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6114,17 +6122,33 @@
       "source": [
         "# **⚠️PERHATIAN: JAWAB DI BAWAH SINI**\n",
         "## Menjelaskan karakteristik tiap cluster berdasarkan rentangnya setelah **Inverse**.\n",
-        "1. **Cluster 1: (The Active Young Students)**:\n",
-        "  - **Rata-rata (mean) <Fitur>:**\n",
-        "    - TransactionAmount: 261.40\n",
-        "    - CustomerAge: 43.50 tahun\n",
-        "    - TransactionDuration: 115.42 detik\n",
-        "    - AccountBalance: 5059.76\n",
-        "    - CustomerOccupation (Mode): Student\n",
-        "    - AgeGroup (Mode): Low\n",
-        "  - **Analisis:** Cluster ini merupakan segmen nasabah muda yang aktif bertransaksi dengan pola yang sangat efisien. Jika dilihat dari data kategorikal, kelompok ini didominasi oleh mahasiswa (Student) dengan profil usia yang secara rata-rata paling muda (43.50 tahun) dibandingkan cluster lainnya. Menariknya, meskipun mereka berada di kelompok usia \"Low\", rata-rata nominal transaksi mereka cukup kompetitif, yakni sebesar 261.40, yang merupakan salah satu yang tertinggi di antara semua cluster.\n",
+        "1. **CLUSTER 0: (Nasabah Dewasa dengan Transaksi Stabil)**\n",
+        "  - Rata-rata (mean) Transaction Amount: 254.45\n",
+        "  - Rata-rata (mean) Customer Age: 45.24\n",
+        "  - Rata-rata (mean) Account Balance: 5084.33\n",
+        "  - Analisis: Cluster ini didominasi oleh nasabah dengan latar belakang pekerjaan Student dan masuk dalam kategori AgeGroup Low. Meskipun usianya sudah cukup matang (sekitar 45 tahun), profil transaksi dan saldo mereka berada di tingkat menengah. Nasabah ini cenderung menggunakan layanan perbankan secara stabil melalui kantor cabang (Branch).\n",
+        "  - Rekomendasi: Menawarkan produk tabungan rencana atau asuransi pendidikan yang sesuai dengan profil finansial mereka yang moderat.\n",
         "\n",
-        "  - Karakteristik unik dari kelompok ini adalah TransactionDuration yang paling singkat (115.42 detik). Ini menunjukkan bahwa mereka sangat terbiasa dengan sistem transaksi yang cepat dan tidak suka membuang waktu. Dari sisi finansial, saldo rata-rata mereka berada di angka 5059.76, sedikit lebih rendah dibanding nasabah mapan di Cluster 3. Kelompok ini cenderung melakukan transaksi melalui kanal Branch dan menggunakan tipe transaksi Debit. Strategi yang tepat untuk cluster ini adalah menawarkan layanan perbankan digital yang serba instan dan promo-promo gaya hidup yang relevan dengan dunia mahasiswa."
+        "2. **CLUSTER 1: (Nasabah Muda yang Efisien dan Aktif)**\n",
+        "  - Rata-rata (mean) Transaction Amount: 261.40\n",
+        "  - Rata-rata (mean) Customer Age: 43.50 (Paling muda)\n",
+        "  - Rata-rata (mean) Transaction Duration: 115.42 (Paling cepat)\n",
+        "  - Analisis: Kelompok ini adalah yang paling muda dan paling efisien dalam bertransaksi (durasi tersingkat). Dengan rata-rata jumlah transaksi yang cukup tinggi, mereka menunjukkan perilaku yang aktif dan gesit dalam menggunakan layanan digital/cabang. Sama seperti Cluster 0, mereka umumnya berprofesi sebagai Student.\n",
+        "  - Rekomendasi: Memberikan promo terkait kemudahan transaksi digital, cashback harian, atau fitur layanan mandiri yang cepat.\n",
+        "\n",
+        "3. **CLUSTER 2: (Nasabah Pasif dengan Transaksi Rendah)**\n",
+        "  - Rata-rata (mean) Transaction Amount: 249.76 (Paling rendah)\n",
+        "  - Rata-rata (mean) Customer Age: 44.93\n",
+        "  - Rata-rata (mean) Account Balance: 5024.62 (Paling rendah)\n",
+        "  - Analisis: Nasabah dalam cluster ini memiliki daya beli dan simpanan paling rendah di antara kelompok lainnya. Menariknya, mereka dikategorikan dalam AgeGroup High meskipun rata-rata usianya sedikit di bawah Cluster 3. Kelompok ini cenderung bermain sangat aman dan berhati-hati dalam pengeluaran.\n",
+        "  - Rekomendasi: Menawarkan program bebas biaya admin atau tabungan tanpa saldo minimum untuk meningkatkan minat mereka dalam bertransaksi.\n",
+        "\n",
+        "4. **CLUSTER 3: (Nasabah Premium Senior dengan Aset Besar)**\n",
+        "  - Rata-rata (mean) Transaction Amount: 261.76 (Paling tinggi)\n",
+        "  - Rata-rata (mean) Customer Age: 45.33 (Paling senior)\n",
+        "  - Rata-rata (mean) Account Balance: 5252.66 (Paling tinggi)\n",
+        "  - Analisis: Ini adalah kelompok nasabah paling elit. Mereka memiliki saldo tertinggi dan jumlah transaksi terbesar. Berbeda dari cluster lain, mayoritas berprofesi sebagai Doctor dan sering menggunakan ATM sebagai kanal transaksi utama. Mereka membutuhkan waktu lebih lama dalam bertransaksi (122.49 detik), menunjukkan ketelitian atau penggunaan fitur yang lebih kompleks.\n",
+        "  - Rekomendasi: Memberikan layanan priority banking, penawaran investasi eksklusif (deposito/obligasi), dan limit transaksi harian yang lebih tinggi."
       ],
       "metadata": {
         "id": "WcaT8sxVzLs6"
@@ -6160,7 +6184,7 @@
         },
         "outputId": "6a1aeedb-45f8-496e-83ed-d1362bccc596"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6402,7 +6426,7 @@
       "metadata": {
         "id": "BEASz_Q__jms"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
